--- a/course_goal/src/components/CourseGoals/CourseInput/CourseInput.css
+++ b/course_goal/src/components/CourseGoals/CourseInput/CourseInput.css
@@ -22,3 +22,16 @@
   background: #fad0ec;
   border-color: #8b005d;
 }
+
+.form-control.invalid input {
+  border-color: red;
+  background-color: rgb(186, 155, 217);
+}
+
+.form-control.invalid label {
+  color: red;
+}
+
+.form-control.blur button {
+  color: rgb(186, 114, 152);
+}
